# did-api

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  Zignar api-did-iota Degree.postman_collection.json  Zignartech did-api.postman_collection.json  development.env  docker-compose.dev.yml  docker-compose.yml
accounts_stronghold/: file.txt
src/: app_service.rs  main.rs
src/jsons_did/: create_did_vm.rs  create_vc.rs  create_vp.rs  holder_credential.rs  holder_data.rs  holder_presentation.rs  mod.rs  remove_vm.rs
src/models/: models.rs
src/utils_did/: common.rs  issuer.rs  mod.rs  rnd_vm_name.rs  user.rs  validator.rs
