[package]
name = "api-did-iota"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
actix-web = "3.3.2"
actix-cors = {version="0.5.4"} 
actix-rt = "2.2.0"
dotenv = "0.15.0"
serde_json = "1.0"
serde = "1.0.119"
identity = { git = "https://github.com/iotaledger/identity.rs", branch = "main",  features = ["account"]}
tokio = { version = "1.14.0", features = ["full"]}
serde_derive = "1.0.130"