[package]
name = "did-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = {version="0.6.1"}
dotenv = "0.15.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4"
rand = "0.8.0"
uuid = {version="1.1.2", features = ["v4"]}

identity_iota = { version = "0.6" }